--- a/package.json
+++ b/package.json
@@ -9,27 +9,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mydatahack/nodejs-lambda-serverless-boilerplate"
+    "url": "https://github.com/aws-lambda-template-generator/js-simple-api-proxy-template"
   },
   "keywords": [],
-  "author": "",
+  "author": "mdh",
   "license": "ISC",
-  "homepage": "https://github.com/mydatahack/nodejs-lambda-serverless-boilerplate#readme",
+  "homepage": "https://github.com/aws-lambda-template-generator",
   "dependencies": {
-    "request": "^2.88.0",
-    "request-promise": "4.2.2",
-    "serverless-plugin-git-variables": "^3.2.0"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
-    "aws-sdk-mock": "^4.2.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.6",
-    "nyc": "^13.1.0",
-    "rewire": "^4.0.1",
-    "serverless": "^1.32.0",
-    "serverless-domain-manager": "^2.6.13",
-    "sinon": "^7.0.0"
+    "eslint": "^7.7.0",
+    "mocha": "^8.1.2",
+    "nock": "^13.0.4",
+    "nyc": "^15.1.0",
+    "serverless": "^1.79.0",
+    "serverless-domain-manager": "^4.2.0",
+    "sinon": "^9.0.3"
   }
 }
