--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
-    "integration": "nyc --reporter=html --reporter=text mocha ./integration/*"
+    "integration": "nyc --reporter=html --reporter=text mocha ./integration/*",
+    "deploy": "sls deploy",
+    "remove": "sls remove"
   },
   "repository": {
     "type": "git",
